# youtube-music-history-downloader

./: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
config/: ydl_options.default.json
youtube_music_history_downloader/: download_history.py  fetch_history.py
